<resources>
    <string name="app_name">EquipmentInspectionApp</string>
    <string name="login_register_text">Register</string>
    <string name="login_login_text">Login</string>
    <string name="login_password_hint">Password</string>
    <string name="login_email_hint">Email</string>
    <string name="register_email_hint">Enter your email</string>
    <string name="register_password_hint">Enter your password</string>
    <string name="register_passwordconfirm_hint">Enter your password again</string>
    <string name="register_register_button_text">Register</string>
    <string name="register_name_hint">Enter your name</string>
    <string name="register_firstname_hint">enter your first name</string>
</resources>